# IndexRL

./: .gitignore  README.md  agent.py  cache_playground.ipynb  dataset.py  environment.py  expression_handler.py  get_expression.py  gpt.py  mcts.py  overfit.py  pretrain_transformer.py  pyproject.toml  requirements.txt  train.py  train_cloud.py  train_serp.py  train_transformer.py  training_reward.py  utils.py
.github/workflows/: tests.yml
configs/: config_transfomer.py
indexrl/: environment.py  mcts.py  training.py  utils.py
tests/: test_main.py
