[tool.poetry]
name = "indexrl"
version = "0.1.0"
description = ""
authors = ["Dilith Jayakody <dilithjay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gdown = "^5.2.0"
gym = "^0.26.2"
numpy = "^2.1.3"
pandas = "^2.2.3"
pytorch-lightning = "^2.4.0"
scikit-learn = "^1.5.2"
segmentation-models-pytorch = "^0.3.4"
torch = "^2.5.1"
torchvision = "^0.20.1"
tqdm = "^4.67.0"
treelib = "^1.7.0"
neptune = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
